--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "axios": "^1.6.8",
     "buffer": "^6.0.3",
     "chart.js": "^4.4.3",
+    "firebase": "^10.14.1",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
